# AgenticADB

./: .gitignore  AGENTS.md  CONTRIBUTING.md  JULES_PROMPT.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
AgenticADB/: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  requirements.txt
AgenticADB/agentic_adb/: adb_client.py  cli.py  device_utils.py  exceptions.py  idb_client.py  idb_parser.py  logging_config.py  models.py  parser.py
AgenticADB/agentic_adb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
AgenticADB/agentic_adb/client/: __init__.py  adb_client.py  base_client.py  idb_client.py
AgenticADB/agentic_adb/models/: __init__.py  ui_element.py
AgenticADB/agentic_adb/parser/: __init__.py  adb_parser.py  base_parser.py  idb_parser.py
AgenticADB/agentic_adb/service/: __init__.py  ui_action_service.py  ui_query_service.py
AgenticADB/tests/: test_cli.py  test_clients.py  test_device_utils.py  test_mcp_server.py  test_parser.py  test_parsers.py  test_services.py
AgenticADB/tests/mocks/: mock_ios_dump.json  mock_ui.xml
android-sample-app/: settings.gradle.kts
android-sample-app/app/: build.gradle.kts
src/: cli.ts  device-utils.ts  index.ts  is-main.ts  mcp-server.ts  runtime-context.ts  startup-checks.ts
src/client/: adb-client.ts  (+2 more)
test/: adb-parser.test.ts  base-client.test.ts  cli.test.ts  clients.test.ts  device-utils.test.ts  idb-parser.test.ts  is-main.test.ts  mcp-schemas.test.ts  services.test.ts  startup-checks.test.ts  ui-element.test.ts
(+19 files in other folders)
