[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-adb"
version = "1.0.0"
description = "Token-efficient Android and iOS UI parser for LLM-driven automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock"
]

[project.scripts]
aadb = "agentic_adb.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_adb*"]
exclude = ["tests*"]
